--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     width="250" height="auto" alt="error"
     />
     <form>
-            <label for="l">srdg</label>
-        <input id="l" name="hello" type="password" placeholder="f"/>
+            <label for="l">random</label>
+        <input id="l" name="hello" type="password" placeholder="random"/>
         <input id="r" name="cool" type="radio" placeholder="f" action/>
         <input id="r" name="cool" type="radio" placeholder="f"/>
         <input id="r" name="cool" type="radio" placeholder="f"/>
