--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     width="250" height="auto" alt="error"
     />
     <form>
-            <label for="l">password(it wont go anywhere i havent hooked it up to a server yet. Maybe one day.</label>
+            <label for="l">password(it wont go anywhere i havent hooked it up to anything yet. Maybe one day.</label>
         <input id="l" name="your password" type="password" placeholder="pass"/>
         <input id="r" name="cool" type="radio" placeholder="f" action/>
         <input id="r" name="cool" type="radio" placeholder="f"/>
