--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SITE_HW </title>
-    <link rel="shortcut icon" href="https://cboimages.com/ClickBidImages/2648/107_0_f74m8yn36w.png">
+    <link rel="shortcut icon" href='https://cboimages.com/ClickBidImages/2648/107_0_f74m8yn36w.png'>
     <style>
         body{
             background-color: black;
