--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
             color: aliceblue;
             font-family: 'Courier New', Courier, monospace;
             border-width: 2px;
-            border: 2px;
-            border-style: dashed;
-            border-color: aliceblue;
+            border: 2px dashed white;
+
         }             
     </style>
 </head>
