--- a/index.html
+++ b/index.html
@@ -5,27 +5,17 @@
     <meta charset="UTF-8">
     <title>SITE_HW </title>
     <link rel="shortcut icon" href='https://cboimages.com/ClickBidImages/2648/107_0_f74m8yn36w.png'>
-    <style>
-        body{
-            background-color: black;
-            color: aliceblue;
-            font-family: 'Courier New', Courier, monospace;
-            border-width: 2px;
-            border: 2px dashed white;
-
-        }             
-    </style>
+    <link rel="stylesheet" href="style.css">         
+   
 </head>
 </body>
     <h1>HW MY SITE</h1>
     <h2>Welcome</h2> 
-    <p>\/ Google</p>
         
     Google <a href="https://google.com">link</a>
-    <p>Email</p>
-    <a href="mailto:lawrencez0830@hotmail.com">email</a>
-    <a href="https://apple.com">apple</a>
-    <p><a href="apple.html">page2</a></p>
+    <br>
+    Email <a href="mailto:lawrencez0830@hotmail.com">email</a>
+    <br>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nesciunt quod consequatur velit vitae officiis libero, et atque qui! Tempore libero ullam aspernatur iure placeat debitis reprehenderit molestiae blanditiis sed.
     <img src="https://cboimages.com/ClickBidImages/2648/107_0_f74m8yn36w.png"
     width="250" height="auto" alt="error"
