--- a/index.html
+++ b/index.html
@@ -16,10 +16,49 @@
     <br>
     Email <a href="mailto:lawrencez0830@hotmail.com">email</a>
     <br>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi nesciunt quod consequatur velit vitae officiis libero, et atque qui! Tempore libero ullam aspernatur iure placeat debitis reprehenderit molestiae blanditiis sed.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed odit vitae est molestias sunt nemo consequuntur, enim quod voluptatem sequi animi, voluptas recusandae explicabo libero eos magnam. Deserunt, iste sunt!
     <img src="https://cboimages.com/ClickBidImages/2648/107_0_f74m8yn36w.png"
     width="250" height="auto" alt="error"
     />
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis exercitationem itaque tempore doloremque ea! Numquam, ab dicta. Ducimus corrupti illo eum nobis praesentium quas, dignissimos in dicta corporis omnis doloremque?
+    <br>
+
+    <br>
+    Work to do's:
+    <br>
+
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, minus nam. Pariatur est nihil veritatis, nesciunt totam perspiciatis rem officia quos, asperiores quia consequatur inventore. Veritatis ullam quod magnam incidunt!
+
+    <br>
+    <br>
+    <div class="gameContainer">
+
+
+        <div class="gameArea">
+            
+<script>
+    window.onload = function() {
+        var thegamelink = "https://play.idevgames.co.uk/embed/minimal-tower-defense";
+        var ref = document.referrer;
+        var theurl = document.referrer;
+        ref = ref.substring(ref.indexOf("://") + 3);
+        ref = ref.split("/")[0];
+        if(ref == "my-ga.me"){
+        theurl = "true"
+        } else {
+            theurl = "false"
+        } 
+        document.getElementById("embededGame").src = thegamelink+"/"+theurl+"?url="+window.location.href;
+    }
+</script>
+<div style="position: relative;height: 0;overflow: hidden;padding-bottom: 56.25%;">
+    <iframe id="embededGame" src="https://play.idevgames.co.uk/embed/minimal-tower-defense" scrolling="no" seamless="seamless" frameBorder="0" style="position: absolute;top:0;left: 0;width: 100%;height: 100%;">Browser not compatible.</iframe>
+</div>
+
+
+
+        </div>
+    </div>
     <form>
             <label for="l">password(it wont go anywhere i havent hooked it up to anything yet. Maybe one day.</label>
         <input id="l" name="your password" type="password" placeholder="pass"/>
