--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 </html>
 <head>
+    <meta name="keywords" content="lawrence, zhao, lawrence zhao">
     <meta charset="UTF-8">
     <title>SITE_HW </title>
     <link rel="shortcut icon" href='https://cboimages.com/ClickBidImages/2648/107_0_f74m8yn36w.png'>
@@ -65,6 +66,8 @@
         <input id="r" name="cool" type="radio" placeholder="f" action/>
         <input id="r" name="cool" type="radio" placeholder="f"/>
         <input id="r" name="cool" type="radio" placeholder="f"/>
+        <br>hi
+        <br>hi
         
 
     </form>
